plugins {
    id 'application'
}

ext {
    gdxVersion = '1.14.0'
    lwjglVersion = '3.4.0'
    junitVersion = '5.10.2'
}

group = 'org.nowstart'
version = '0.0.1-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

dependencies {
    implementation enforcedPlatform("org.lwjgl:lwjgl-bom:${lwjglVersion}")
    implementation "com.badlogicgames.gdx:gdx-backend-lwjgl3:${gdxVersion}"
    implementation "com.badlogicgames.gdx:gdx-freetype:${gdxVersion}"
    runtimeOnly "com.badlogicgames.gdx:gdx-platform:${gdxVersion}:natives-desktop"
    runtimeOnly "com.badlogicgames.gdx:gdx-freetype-platform:${gdxVersion}:natives-desktop"

    testImplementation "org.junit.jupiter:junit-jupiter:${junitVersion}"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

application {
    mainClass = 'org.nowstart.zunyang.partypanic.DesktopLauncher'
    applicationDefaultJvmArgs = ['--enable-native-access=ALL-UNNAMED']
}

test {
    useJUnitPlatform()
}
